--- a/api/internal/api-copy-protected-object-internal.yaml
+++ b/api/internal/api-copy-protected-object-internal.yaml
@@ -10,7 +10,7 @@ paths:
       x-dr-role: 'N'
       x-product: OceanProtect X
       x-dm-role: 'N'
-      x-impact-subsystem: 影响
+      x-impact-subsystem: 不影响
       x-access-port: 30081
       x-auth-required: 'N'
       x-rd-admin-role: 'N'
