--- a/api/external/api-protected-env-v1.yaml
+++ b/api/external/api-protected-env-v1.yaml
@@ -67,6 +67,8 @@ paths:
       operationId: query_resources_v1_environments_get
       summary: 查询主机资源信息列表
     post:
+      x-dr-role: 'N'
+      x-dm-role: 'N'
       x-product: CyberEngine,OceanProtect X
       x-impact-subsystem: 不影响
       x-access-port: 25081
@@ -104,8 +106,10 @@ paths:
         - Protected Environment
       operationId: scan_env_v1_environments_post
       summary: 注册资源
-  '/v1/environments/rescan/{env_id}':
+  /v1/environments/rescan/{env_id}:
     put:
+      x-dr-role: 'N'
+      x-dm-role: 'N'
       x-product: CyberEngine,OceanProtect X
       x-impact-subsystem: 不影响
       x-access-port: 25081
@@ -143,8 +147,10 @@ paths:
         - Protected Environment
       operationId: rescan_env_v1_environments_rescan__env_id__put
       summary: 重新扫描资源环境信息
-  '/v1/environments/{env_id}':
+  /v1/environments/{env_id}:
     delete:
+      x-dr-role: 'N'
+      x-dm-role: 'N'
       x-product: CyberEngine,OceanProtect X
       x-impact-subsystem: 不影响
       x-access-port: 25081
@@ -258,7 +264,7 @@ definitions:
       - page_size
       - page_no
       - items
-    title: 'BasePage[EnvironmentSchema]'
+    title: BasePage[EnvironmentSchema]
     type: object
   CreateEnvSchema:
     properties:
