--- a/api/external/api-protected-object.yaml
+++ b/api/external/api-protected-object.yaml
@@ -7,6 +7,7 @@ tags:
 paths:
   /v1/protected-objects:
     delete:
+      x-dr-role: 'N'
       x-product: CyberEngine,OceanProtect X
       x-dm-role: 'N'
       x-impact-subsystem: 不影响
@@ -46,13 +47,14 @@ paths:
       operationId: delete_v1_protected_objects_delete
       summary: 批量移除保护
     get:
+      x-dr-role: 'N'
       x-product: CyberEngine,OceanProtect X
       x-dm-role: 'N'
       x-impact-subsystem: 不影响
       x-access-port: 25081
       x-auth-required: 'Y'
       x-rd-admin-role: 'N'
-      x-auditor-role: 'Y'
+      x-auditor-role: 'N'
       x-dp-admin-role: 'Y'
       x-public-api: 'Y'
       x-sysadmin-role: 'Y'
@@ -126,13 +128,14 @@ paths:
       operationId: page_query_v1_protected_objects_get
       summary: 分页查询SLA关联资源信息列表
     post:
+      x-dr-role: 'N'
       x-product: CyberEngine,OceanProtect X
       x-dm-role: 'N'
       x-impact-subsystem: 不影响
       x-access-port: 25081
       x-auth-required: 'Y'
       x-rd-admin-role: 'N'
-      x-auditor-role: 'N'
+      x-auditor-role: 'Y'
       x-dp-admin-role: 'Y'
       x-public-api: 'Y'
       x-sysadmin-role: 'Y'
@@ -209,6 +212,7 @@ paths:
       summary: 修改保护
   /v1/protected-objects/batch:
     post:
+      x-dr-role: 'N'
       x-product: CyberEngine,OceanProtect X
       x-dm-role: 'N'
       x-impact-subsystem: 不影响
@@ -251,6 +255,7 @@ paths:
       summary: 批量创建保护对象
   /v1/protected-objects/status/action/activate:
     put:
+      x-dr-role: 'N'
       x-product: CyberEngine,OceanProtect X
       x-dm-role: 'N'
       x-impact-subsystem: 不影响
@@ -291,6 +296,7 @@ paths:
       summary: 批量激活保护
   /v1/protected-objects/status/action/deactivate:
     put:
+      x-dr-role: 'N'
       x-product: CyberEngine,OceanProtect X
       x-dm-role: 'N'
       x-impact-subsystem: 不影响
@@ -331,6 +337,7 @@ paths:
       summary: 批量取消激活保护
   /v1/protected-objects/{resource_id}/action/backup:
     post:
+      x-dr-role: 'N'
       x-product: CyberEngine,OceanProtect X
       x-dm-role: 'N'
       x-impact-subsystem: 不影响
@@ -378,6 +385,7 @@ paths:
       summary: 手动备份资源
   /v1/protected-objects/{resource_id}/backup-time:
     get:
+      x-dr-role: 'N'
       x-product: CyberEngine,OceanProtect X
       x-dm-role: 'N'
       x-impact-subsystem: 不影响
@@ -416,6 +424,7 @@ paths:
       summary: 查询保护对象的备份时间信息
   /v1/protected-objects/sla-compliance:
     get:
+      x-dr-role: 'N'
       x-product: CyberEngine,OceanProtect X
       x-dm-role: 'N'
       x-rd-admin-role: 'N'
