--- a/api/external/api-restore-wf.yaml
+++ b/api/external/api-restore-wf.yaml
@@ -7,6 +7,7 @@ tags:
 paths:
   /v1/restores:
     post:
+      x-dr-role: 'N'
       x-product: OceanProtect X
       x-dm-role: 'N'
       x-impact-subsystem: 不影响
