--- a/api/internal/api-native-backup-plugin-internal.yaml
+++ b/api/internal/api-native-backup-plugin-internal.yaml
@@ -19,7 +19,7 @@ paths:
       x-dr-role: 'N'
       x-product: OceanProtect X
       x-dm-role: 'N'
-      x-impact-subsystem: 影响
+      x-impact-subsystem: 不影响
       x-access-port: 30081
       x-auth-required: 'N'
       x-rd-admin-role: 'N'
@@ -77,7 +77,7 @@ paths:
       x-dr-role: 'N'
       x-product: OceanProtect X
       x-dm-role: 'N'
-      x-impact-subsystem: 影响
+      x-impact-subsystem: 不影响
       x-access-port: 30081
       x-auth-required: 'N'
       x-rd-admin-role: 'N'
@@ -126,16 +126,17 @@ paths:
       deprecated: false
   /v1/eb/internal/local-storage:
     put:
+      x-dr-role: 'N'
       x-product: OceanProtect X
-      x-dm-role: 'Y'
-      x-impact-subsystem: 影响
+      x-dm-role: 'N'
+      x-impact-subsystem: 不影响
       x-access-port: 30081
       x-auth-required: 'N'
-      x-rd-admin-role: 'Y'
-      x-auditor-role: 'Y'
-      x-dp-admin-role: 'Y'
+      x-rd-admin-role: 'N'
+      x-auditor-role: 'N'
+      x-dp-admin-role: 'N'
       x-public-api: 'N'
-      x-sysadmin-role: 'Y'
+      x-sysadmin-role: 'N'
       tags:
         - dme-controller
       summary: updateLocalStorage
@@ -169,16 +170,17 @@ paths:
       deprecated: false
   /v1/eb/internal/s3-storage:
     post:
+      x-dr-role: 'N'
       x-product: OceanProtect X
-      x-dm-role: 'Y'
-      x-impact-subsystem: 影响
+      x-dm-role: 'N'
+      x-impact-subsystem: 不影响
       x-access-port: 30081
       x-auth-required: 'N'
-      x-rd-admin-role: 'Y'
-      x-auditor-role: 'Y'
-      x-dp-admin-role: 'Y'
+      x-rd-admin-role: 'N'
+      x-auditor-role: 'N'
+      x-dp-admin-role: 'N'
       x-public-api: 'N'
-      x-sysadmin-role: 'Y'
+      x-sysadmin-role: 'N'
       tags:
         - dme-controller
       summary: checkS3Connect
@@ -218,9 +220,9 @@ paths:
       x-dr-role: 'N'
       x-product: OceanProtect X
       x-dm-role: 'N'
-      x-impact-subsystem: 影响
+      x-impact-subsystem: 不影响
       x-access-port: 25081
-      x-auth-required: 'Y'
+      x-auth-required: 'N'
       x-rd-admin-role: 'N'
       x-auditor-role: 'N'
       x-dp-admin-role: 'N'
@@ -256,16 +258,17 @@ paths:
       deprecated: false
   /v1/eb/srv_jobmanager/plan:
     get:
+      x-dr-role: 'N'
       x-product: OceanProtect X
-      x-dm-role: 'Y'
-      x-impact-subsystem: 影响
-      x-access-port: 30081
+      x-dm-role: 'N'
+      x-impact-subsystem: 不影响
+      x-access-port: 25081
       x-auth-required: 'N'
-      x-rd-admin-role: 'Y'
-      x-auditor-role: 'Y'
-      x-dp-admin-role: 'Y'
-      x-public-api: 'N'
-      x-sysadmin-role: 'Y'
+      x-rd-admin-role: 'N'
+      x-auditor-role: 'N'
+      x-dp-admin-role: 'N'
+      x-public-api: 'Y'
+      x-sysadmin-role: 'N'
       tags:
         - dme-controller
       summary: queryPlans
@@ -289,16 +292,17 @@ paths:
             - global
       deprecated: false
     post:
+      x-dr-role: 'N'
       x-product: OceanProtect X
-      x-dm-role: 'Y'
-      x-impact-subsystem: 影响
-      x-access-port: 30081
+      x-dm-role: 'N'
+      x-impact-subsystem: 不影响
+      x-access-port: 25081
       x-auth-required: 'N'
-      x-rd-admin-role: 'Y'
-      x-auditor-role: 'Y'
-      x-dp-admin-role: 'Y'
+      x-rd-admin-role: 'N'
+      x-auditor-role: 'N'
+      x-dp-admin-role: 'N'
       x-public-api: 'Y'
-      x-sysadmin-role: 'Y'
+      x-sysadmin-role: 'N'
       tags:
         - dme-controller
       summary: createPlan
@@ -338,7 +342,7 @@ paths:
       x-dr-role: 'N'
       x-product: OceanProtect X
       x-dm-role: 'N'
-      x-impact-subsystem: 影响
+      x-impact-subsystem: 不影响
       x-access-port: 25081
       x-auth-required: 'N'
       x-rd-admin-role: 'N'
@@ -382,16 +386,17 @@ paths:
       deprecated: false
   /v1/eb/srv_jobmanager/plan/{id}:
     get:
+      x-dr-role: 'N'
       x-product: OceanProtect X
       x-dm-role: 'N'
-      x-impact-subsystem: 影响
-      x-access-port: 30081
+      x-impact-subsystem: 不影响
+      x-access-port: 25081
       x-auth-required: 'N'
-      x-rd-admin-role: 'Y'
-      x-auditor-role: 'Y'
-      x-dp-admin-role: 'Y'
+      x-rd-admin-role: 'N'
+      x-auditor-role: 'N'
+      x-dp-admin-role: 'N'
       x-public-api: 'Y'
-      x-sysadmin-role: 'Y'
+      x-sysadmin-role: 'N'
       tags:
         - dme-controller
       summary: getPlan
@@ -426,7 +431,7 @@ paths:
       x-dm-role: 'N'
       x-impact-subsystem: 不影响
       x-access-port: 25081
-      x-auth-required: 'Y'
+      x-auth-required: 'N'
       x-rd-admin-role: 'N'
       x-auditor-role: 'N'
       x-dp-admin-role: 'N'
@@ -462,16 +467,17 @@ paths:
       deprecated: false
   /v1/eb/srv_jobmanager/storagepool:
     post:
+      x-dr-role: 'N'
       x-product: OceanProtect X
-      x-dm-role: 'Y'
-      x-impact-subsystem: 影响
-      x-access-port: 30081
+      x-dm-role: 'N'
+      x-impact-subsystem: 不影响
+      x-access-port: 25081
       x-auth-required: 'N'
-      x-rd-admin-role: 'Y'
-      x-auditor-role: 'Y'
-      x-dp-admin-role: 'Y'
+      x-rd-admin-role: 'N'
+      x-auditor-role: 'N'
+      x-dp-admin-role: 'N'
       x-public-api: 'Y'
-      x-sysadmin-role: 'Y'
+      x-sysadmin-role: 'N'
       tags:
         - dme-controller
       summary: createStoragePool
@@ -508,16 +514,17 @@ paths:
       deprecated: false
   /v1/eb/srv_jobmanager/storagepool/:
     get:
+      x-dr-role: 'N'
       x-product: OceanProtect X
-      x-dm-role: 'Y'
-      x-impact-subsystem: 影响
-      x-access-port: 30081
+      x-dm-role: 'N'
+      x-impact-subsystem: 不影响
+      x-access-port: 25081
       x-auth-required: 'N'
-      x-rd-admin-role: 'Y'
-      x-auditor-role: 'Y'
-      x-dp-admin-role: 'Y'
+      x-rd-admin-role: 'N'
+      x-auditor-role: 'N'
+      x-dp-admin-role: 'N'
       x-public-api: 'Y'
-      x-sysadmin-role: 'Y'
+      x-sysadmin-role: 'N'
       tags:
         - dme-controller
       summary: queryStoragepools
@@ -542,16 +549,17 @@ paths:
       deprecated: false
   /v1/eb/srv_jobmanager/storagepool/{poolId}:
     put:
+      x-dr-role: 'N'
       x-product: OceanProtect X
-      x-dm-role: 'Y'
-      x-impact-subsystem: 影响
-      x-access-port: 30081
+      x-dm-role: 'N'
+      x-impact-subsystem: 不影响
+      x-access-port: 25081
       x-auth-required: 'N'
-      x-rd-admin-role: 'Y'
-      x-auditor-role: 'Y'
-      x-dp-admin-role: 'Y'
+      x-rd-admin-role: 'N'
+      x-auditor-role: 'N'
+      x-dp-admin-role: 'N'
       x-public-api: 'Y'
-      x-sysadmin-role: 'Y'
+      x-sysadmin-role: 'N'
       tags:
         - dme-controller
       summary: updateStoragepool
@@ -595,10 +603,10 @@ paths:
     get:
       x-dr-role: 'N'
       x-product: OceanProtect X
-      x-dm-role: 'Y'
-      x-impact-subsystem: 影响
-      x-access-port: 30081
-      x-auth-required: 'Y'
+      x-dm-role: 'N'
+      x-impact-subsystem: 不影响
+      x-access-port: 25081
+      x-auth-required: 'N'
       x-rd-admin-role: 'N'
       x-auditor-role: 'N'
       x-dp-admin-role: 'N'
@@ -647,9 +655,9 @@ paths:
       x-dr-role: 'N'
       x-product: OceanProtect X
       x-dm-role: 'N'
-      x-impact-subsystem: 影响
+      x-impact-subsystem: 不影响
       x-access-port: 25081
-      x-auth-required: 'Y'
+      x-auth-required: 'N'
       x-rd-admin-role: 'N'
       x-auditor-role: 'N'
       x-dp-admin-role: 'N'
@@ -692,10 +700,10 @@ paths:
     get:
       x-dr-role: 'N'
       x-product: OceanProtect X
-      x-dm-role: 'Y'
-      x-impact-subsystem: 影响
+      x-dm-role: 'N'
+      x-impact-subsystem: 不影响
       x-access-port: 25081
-      x-auth-required: 'Y'
+      x-auth-required: 'N'
       x-rd-admin-role: 'N'
       x-auditor-role: 'N'
       x-dp-admin-role: 'N'
@@ -734,9 +742,9 @@ paths:
       x-dr-role: 'N'
       x-product: OceanProtect X
       x-dm-role: 'N'
-      x-impact-subsystem: 影响
+      x-impact-subsystem: 不影响
       x-access-port: 25081
-      x-auth-required: 'Y'
+      x-auth-required: 'N'
       x-rd-admin-role: 'N'
       x-auditor-role: 'N'
       x-dp-admin-role: 'N'
@@ -818,7 +826,7 @@ paths:
       x-dr-role: 'N'
       x-product: OceanProtect X
       x-dm-role: 'N'
-      x-impact-subsystem: 影响
+      x-impact-subsystem: 不影响
       x-access-port: 30081
       x-auth-required: 'N'
       x-rd-admin-role: 'N'
@@ -862,7 +870,7 @@ paths:
       x-dr-role: 'N'
       x-product: OceanProtect X
       x-dm-role: 'N'
-      x-impact-subsystem: 影响
+      x-impact-subsystem: 不影响
       x-access-port: 30081
       x-auth-required: 'N'
       x-rd-admin-role: 'N'
