--- a/api/internal/api-copy-protected-object-internal.yaml
+++ b/api/internal/api-copy-protected-object-internal.yaml
@@ -8,7 +8,7 @@ paths:
   /v1/internal/protected-copy-objects/action/sync-sla:
     put:
       x-dr-role: 'N'
-      x-product: OceanProtect X
+      x-product: OceanProtect X8000,OceanProtect X6000,OceanProtect X3000
       x-dm-role: 'N'
       x-impact-subsystem: 不影响
       x-access-port: 30081
